--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,10 @@
     "exclude": [
         "node_modules",
         "dist",
+        "coverage",
         "prisma.config.ts",
         "prisma.config.js",
+        "jest.config.js",
         "test"
     ]
 }
